syntax = "proto3";

package session3.clientserver.model;

option go_package = "github.com/ibrahimker/golang-intermediate/session-3/clientserver/model";

import "google/protobuf/empty.proto";

message GarageCoordinate {
  float latitude = 1;
  float longitude = 2;
}

message Garage {
  string id = 1;
  string name = 2;
  GarageCoordinate coordinate = 3;
}

message GarageList {
  repeated Garage list = 1;
}

message GarageListByUser {
  map<string, GarageList> list = 1;
}

message GarageUserId {
  string user_id = 1;
}

message GarageAndUserId {
  string user_id = 1;
  Garage garage = 2;
}

service Garages {
  rpc List(GarageUserId) returns (GarageList) {}
  rpc Add(GarageAndUserId) returns (google.protobuf.Empty) {}
}


