syntax = "proto3";

package session3.introduction.model;

option go_package = "github.com/ibrahimker/golang-intermediate/session-3/introduction/model";

enum UserGender {
  UNDEFINED = 0;
  MALE = 1;
  FEMALE = 2;
}

message User {
  string id = 1;
  string name = 2;
  string password = 3;
  UserGender gender = 4;
}

message UserList {
  repeated User list = 1;
}

